--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ description              : "Expert deep cleaning, housekeeping, and sanitation s
 url                      : "https://goashinecs.com"  # Your custom domain
 baseurl                  : ""  # Leave blank for root site
 repository               : "goashinecs/goashinecs"  # Your GitHub repo
-teaser                   : "/assets/img/logo.png"  # Optional fallback image
-logo                     : "/assets/img/logo.png"  # Your logo in the header
+teaser                   : "/assets/logo.png"  # Optional fallback image
+logo                     : "/assets/logo.png"  # Your logo in the header
 masthead_title           : "Goa Shine Cleaning Services"
 breadcrumbs              : true
 words_per_minute         : 180
@@ -77,7 +77,7 @@ facebook:
   app_id:                 # Optional, only if using Facebook App for analytics
   publisher:              # Optional
 
-og_image: "/assets/img/logo.png"  # Used when sharing links (Facebook, WhatsApp, etc.)
+og_image: "/assets/logo.png"  # Used when sharing links (Facebook, WhatsApp, etc.)
 
 # Structured data for SEO (Google, etc.)
 social:
