--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ analytics:
 # Site Author
 author:
   name: "Goa Shine Cleaning Services"
-  avatar: "/assets/img/logo.png"
+  avatar: "/assets/logo.png"
   bio: "Goa’s trusted cleaning experts. Deep cleaning, housekeeping, pest control, and more."
   location: "Calangute, Goa 403516"
   email: goashinecs@gmail.com
