--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ subtitle: "Professional Cleaning Services in Goa"
 name: "Goa Shine Cleaning Services"
 description: "Expert deep cleaning, housekeeping, and sanitation services across Goa. Trusted by homeowners and businesses alike."
 
-url: "https://goashinecs.com"
+url: "https://blog.goashinecs.com"
 baseurl: ""  # root site
 repository: "goashinecs/goashinecs"
 
